--- a/design/css/home.css
+++ b/design/css/home.css
@@ -5,4 +5,4 @@
 
 .hero .intro{padding-top:300px;}
 .hero .intro p{font-size:18px; line-height: 28px;}
-.hero h2 span{background-color:#999; color:#fff;}
+.hero h2 span{background-color:rgba(0,0,0,0.7); color:#fff;}
