--- a/design/css/home.css
+++ b/design/css/home.css
@@ -1,8 +1,7 @@
 
 
 /* hero */
-.hero{background:url(../images/hero/recluse_3d_web.jpg) top center no-repeat; height: 650px;}
+.hero{background:url(../images/hero/recluse_3d_web.jpg) top center no-repeat; height: 600px;}
+.hero .intro{padding-top:330px;}
 
-.hero .intro{padding-top:300px;}
-.hero .intro p{font-size:18px; line-height: 28px;}
-.hero h2 span{background-color:rgba(0,0,0,0.7); color:#fff;}
+.about{padding-top:60px;}
