--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -18,13 +18,30 @@ body{padding-top: 100px;}
 
 h1, h2, h3, h4, h5, h6, p{color:#999; font-weight:normal;}
 
-h2{font-weight:100; text-transform: uppercase;}
 
+
+h2{font-weight:100; text-transform: uppercase;}
+h2 span{background-color:rgba(0,0,0,0.7); color:#fff; padding:0 3px;}
+
+p{font-size:14px; line-height: 28px;}
 a{color:#f51a1a;}
 a:hover{color:#f51a1a;}
 
-/* customising the navbar */
+
+
+
+/* ______________________________________________________________________*/
 .navbar-inner{background:none; margin-bottom:none; background-color:rgba(255,255,255,0.95);}
-.navbar-inner .brand{padding:40px 40px;}
-.navbar-inner .nav li a{padding:40px 40px;}
-.navbar-inner .nav .active a:focus{background-color:#09f;}
+.navbar-inner .brand{padding:40px 20px;}
+.navbar-inner .nav li a{padding:40px 40px; color:#bbb}
+.navbar-inner .nav li a:hover{color:#f51a1a;}
+.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus{color:#f51a1a; background-color:#f6f6f6;} /* active class */
+
+
+
+
+
+/* pattern application */
+/* ______________________________________________________________________*/
+
+
