--- a/design/css/home.css
+++ b/design/css/home.css
@@ -4,4 +4,4 @@
 .hero{background:url(../images/hero/recluse_3d_web.jpg) top center no-repeat; height: 600px;}
 .hero .intro{padding-top:330px;}
 
-.about{padding-top:60px;}
+.trust{}
