--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -20,10 +20,10 @@ h1, h2, h3, h4, h5, h6, p{color:#999; font-weight:normal;}
 
 
 
-h2{font-weight:100; text-transform: uppercase;}
+h2{font-weight:100; text-transform: uppercase; font-size:20px;}
 h2 span{background-color:rgba(0,0,0,0.7); color:#fff; padding:0 3px;}
 
-p{font-size:14px; line-height: 28px;}
+p{font-size:13px; line-height: 22px;}
 a{color:#f51a1a;}
 a:hover{color:#f51a1a;}
 
