pausing home work, starting work page

--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -1,4 +1,4 @@
-/* Andrew Chin eats rainbows for breakfast */
+/* Andrew Chin eats rainbows for breakfast*/
 
 
 /* bootstrap hacks */
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6, p{color:#999; font-weight:normal;}
 
 
 h2{font-weight:100; text-transform: uppercase; font-size:20px;}
-h2 span{background-color:rgba(0,0,0,0.7); color:#fff; padding:0 3px;}
+h2 span{background-color:rgba(0,0,0,0.7); color:#fff; padding:3px 5px;}
 
 p{font-size:13px; line-height: 22px; color:#666;}
 a{color:#f51a1a;}
@@ -38,13 +38,10 @@ a:hover{color:#f51a1a;}
 .navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus{color:#f51a1a; background-color:#f6f6f6;} /* active class */
 
 
-/* an image */
-/*
-img{opacity: 0.8; display:block; height:140px; transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -webkit-transition: all .25s ease-in-out;}
-img:hover{opacity: 1;}
-*/
 
-.trust .fadehover{position: relative;}
+/* javascript image fade */
+/* ______________________________________________________________________*/
+.fadehover{position: relative;}
 .bw{position: absolute; left: 0; top: 0; z-index: 10;}
 .c{position: absolute; left: 0; top: 0;}
 
