--- a/design/css/home.css
+++ b/design/css/home.css
@@ -5,5 +5,5 @@
 .hero .intro{padding-top:330px;}
 
 
-.trust{padding-bottom:60px;}
-.trust .recent_work{padding-top:17px;}
+.branding{padding-bottom:60px;}
+.branding .recent_work{padding-top:17px;}
