--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -14,6 +14,7 @@ body{padding-top: 100px;}
 ::-moz-selection {background: #ffb7b7; /* Firefox */}
 
 
+
 /* typography */
 /* ______________________________________________________________________*/
 
@@ -24,27 +25,45 @@ h1, h2, h3, h4, h5, h6, p{color:#999; font-weight:normal;}
 h2{font-weight:100; text-transform: uppercase; font-size:20px;}
 h2 span{background-color:rgba(0,0,0,0.7); color:#fff; padding:3px 5px;}
 
-p{font-size:13px; line-height: 22px; color:#666;}
-a{color:#f51a1a;}
-a:hover{color:#f51a1a;}
+h4{font-size:13px; text-transform: uppercase; }
 
+ul li,
+p{font-size:13px; line-height: 22px; color:#666;}
+a{color:#f51a1a; transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -webkit-transition: all .25s ease-in-out;}
+a:hover{color: transparent; text-shadow: 0 0 2px rgba(245,26,26,0.8); text-decoration: none;}
+
+
+hr{margin-top: 0;}
 
 
 /* header */
 /* ______________________________________________________________________*/
 .navbar-inner{background:none; margin-bottom:none; background-color:rgba(255,255,255,0.95); box-shadow: none !important; border-bottom:1px solid #ddd;}
-.navbar-inner .brand{padding:40px 20px;}
+.navbar-inner .brand{background:url(../images/header/logo.png) no-repeat center center #f51a1a; display:block; text-indent: -9999px; width:47px; height:28px; top:50%; padding:35px 30px 35px 20px;}
+.navbar-inner .brand:hover{/* do magic here */}
 .navbar-inner .nav li a{padding:40px 40px; color:#bbb;}
 .navbar-inner .nav li a:hover{color:#f51a1a;}
-.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus{color:#f51a1a; background-color:#f6f6f6;} /* active class */
+.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus{color:#f51a1a; background:none; border:none; box-shadow:none;} /* active class */
 
 
 
-/* javascript image fade */
+/* javascript image fade effect */
 /* ______________________________________________________________________*/
 .fadehover{position: relative; height:140px;}
 .bw{position: absolute; left: 0; top: 0; z-index: 10;}
 .c{position: absolute; left: 0; top: 0;}
+
+
+
+
+
+/* item page */
+/* ______________________________________________________________________*/
+.item .services{padding-left:20px;}
+.item .services li{padding:5px 0;}
+.item .services li i{padding-right:10px;}
+.item a.external_link{position: relative; top:20px;}
+
 
 
 
