--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -61,7 +61,7 @@ hr{margin-top: 0;}
 
 /* work / gallery */
 /* ______________________________________________________________________*/
-.work{padding-top:30px;}
+.work{}
 .work p{text-transform: none;}
 .gallery{padding-top:20px;}
 
