--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6, p{color:#999; font-weight:normal;}
 
 
 h2{font-weight:100; text-transform: uppercase; font-size:24px; padding-bottom: 10px;}
-h2 span{background-color:#444; color:#fff; padding:3px 8px;}
+h2 span{color:#666; font-size:30px;}
 h4{font-size:13px; text-transform: uppercase; }
 
 ul li,
@@ -31,7 +31,7 @@ hr{margin-top: 0;}
 /* ______________________________________________________________________*/
 .home{text-align: center; border-top:5px solid #f51a1a;}
 
-.bit{padding:100px 0;}
+.bit{padding:100px 0 100px;}
 
 
 ::selection {background: #ffb7b7; /* Safari */}
@@ -43,9 +43,11 @@ hr{margin-top: 0;}
 /* hero */
 .hero{background:#fff;}
 
-.contact_me{text-align: center;padding-bottom: 8px;}
-.contact_me a{padding:10px; color:#fff; background:#F51A1A;}
-.contact_me a:hover{opacity:0.7;}
+
+/* call to action */
+.action{text-align: center;padding-bottom: 8px; margin-top:40px;}
+.action a{padding:10px; color:#fff; background:#F51A1A; border-radius: 3px; font-size:18px;}
+.action a:hover{opacity:0.7;}
 
 
 
@@ -75,7 +77,45 @@ hr{margin-top: 0;}
 
 
 
+/* social */
+/* ______________________________________________________________________*/
+.social{position: relative;}
+.social a{margin:0 10px; transition: all .15s ease-in-out; -moz-transition: all .15s ease-in-out; -webkit-transition: all .15s ease-in-out; opacity:0.8; position: relative;}
+.social a:hover{opacity:1; top:5px;}
+
+
 /* footer */
 /* ______________________________________________________________________*/
 footer{margin-top:40px; padding-bottom:80px; text-align: center;}
 footer a{padding:0 10px; color:#999;}
+
+
+
+
+
+
+
+
+
+
+/* animate */
+#balls {
+	-webkit-animation-duration: 0.5s;
+	-webkit-animation-delay: 1s;
+/* 	-webkit-animation-iteration-count: infinite; */
+}
+
+#intro_body {
+	-webkit-animation-duration: 0.5s;
+	-webkit-animation-delay: 1.2s;
+/* 	-webkit-animation-iteration-count: infinite; */
+}
+
+#contact_me {
+	-webkit-animation-duration: 0.5s;
+	-webkit-animation-delay: 1.4s;
+/* 	-webkit-animation-iteration-count: infinite; */
+}
+
+
+
