--- a/design/css/work.css
+++ b/design/css/work.css
@@ -1,11 +1,11 @@
-/* work / gallery */
+/* work / work */
 /* -------------------------------------------------------------------------------------------- */
-.work{}
-.work .item{border:solid 1px #eee; margin-bottom:30px;}
 
 
-
-
+/* item animation */
+#work {overflow: hidden;}
+#work .item {position: relative; color: #000; overflow:hidden; border:solid 1px #eee; margin-bottom:30px;}
+#work .item span {display: none; font-size: 14px; position: absolute; bottom: 0; left: 0; text-align:center; padding-top:20px; background:#f51a1a; width:100%; height:40%; opacity:0.8; color:#fff;}
 
 /* piece/ each work item page */
 /* ______________________________________________________________________*/
