--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -5,31 +5,33 @@
 
 
 /* hacks */
+body{padding-top:100px;}
 .icon{background-image:none !important;} /* remove bootstrap icons */
-i{padding-top:2px;}
+i{padding-top:0px;}
 /* typography */
 /* ______________________________________________________________________*/
 
-h1, h2, h3, h4, h5, h6{font-family: "proxima-nova",sans-serif; color:#999; font-weight:100}
 
-p, a, ul li{font-family: "open-sans",sans-serif;}
+h1, h2, h3, h4, p, a, ul li{font-family: "proxima-nova",sans-serif; color:#999; }
 
-h2{font-weight:200; text-transform: uppercase; font-size:30px;}
+
+h2{font-weight:200; text-transform: uppercase; font-size:38px;}
 h2 span{color:#666;}
 h3{font-size:18px; text-transform: uppercase; letter-spacing: 2px;}
 h4{font-size:13px; text-transform: uppercase; }
 
 ul li,
-p{font-size:18px; line-height: 28px; color:#666;}
-a{color:#f51a1a; transition: all .15s ease-in-out; -moz-transition: all .15s ease-in-out; -webkit-transition: all .15s ease-in-out;}
-a:hover{color: transparent; text-shadow: 0 0 2px rgba(245,26,26,0.8); text-decoration: none;}
+p{font-size:18px; line-height: 28px; color:#666; font-weight:300;}
+p.lead{font-weight:300; font-size:20px;}
+a{color:#d98569; transition: all .15s ease-in-out; -moz-transition: all .15s ease-in-out; -webkit-transition: all .15s ease-in-out;}
+a:hover{color: #c96168; text-decoration: none;}
 
 hr{margin-top: 0;}
 
 
 /* OVERALL BITS */
 /* ______________________________________________________________________*/
-section{text-align: center; border-top:5px solid #f51a1a;}
+section{text-align: center;}
 .bit{padding:100px 0 100px;}
 
 
@@ -40,16 +42,40 @@ section{text-align: center; border-top:5px solid #f51a1a;}
 
 /* HEADER */
 /* ______________________________________________________________________*/
-header a{background:#F51A1A; color:#fff; padding:10px; border-radius: 5px; transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -webkit-transition: all .25s ease-in-out;}
-header a:hover{}
+
+.navbar .navbar-inner{background:#1d2124; padding:30px 0 20px; border:none;}
+.navbar .navbar-inner .brand{padding-top:0;}
+.navbar ul.nav li a{color:#fff; text-shadow: none; font-size:13px; letter-spacing:2px; text-transform: uppercase;}
+
+
 
 /* hero */
-.hero{background:#fff;}
+.hero{position: relative; padding:100px 0 0; margin-bottom:30px;
+   background-color: #d98569; 
+   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#c96168), to(#d98569));
+   background-image: -webkit-linear-gradient(top, #c96168, #d98569); 
+   background-image:    -moz-linear-gradient(top, #c96168, #d98569);
+   background-image:     -ms-linear-gradient(top, #c96168, #d98569);
+   background-image:      -o-linear-gradient(top, #c96168, #d98569);
+}
+.hero .intro h2 span{color:#fff;}
+.hero .intro p{color:#fff;}
+.hero .intro p.lead{color:#fff; font-size:48px; font-weight: 100; line-height: 52px; padding-bottom:80px;}
+.hero .intro a{color:#fff; text-decoration: underline;}
+.hero .intro a:hover{text-decoration: none;}
+.hero .contact_link{padding:8px 0;}
+.hero .contact_link a{background :#1d2124; padding:10px; color:#fff; font-size:13px; text-transform: uppercase; letter-spacing: 1px; transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -webkit-transition: all .25s ease-in-out;}
+.hero .contact_link a:hover{padding:15px 10px 10px;}
+
+
+
+
+
 
 
 /* call to action */
 .action{text-align: center;padding-bottom: 40px; margin-top:40px;}
-.action a{padding:10px 15px; color:#fff; background:#F51A1A; border-radius: 3px; font-size:18px; text-shadow: 0px 2px 1px #c71414; box-shadow: inset 0px 2px 2px #c71414;}
+.action a{padding:10px 15px; color:#fff; background:#d98569; border-radius: 3px; font-size:18px; text-shadow: 0px 2px 1px #c71414; box-shadow: inset 0px 2px 2px #c71414;}
 .action a:hover{opacity:0.7;}
 
 
@@ -57,8 +83,7 @@ header a:hover{}
 
 /* footer */
 /* ______________________________________________________________________*/
-footer{padding-top:40px; padding-bottom:80px; text-align: center;}
-footer a{color:#999;}
+footer{padding-top:40px; padding-bottom:80px; text-align: center; background:#1d2124;}
 
 /* info */
 .info{padding-bottom:20px;}
@@ -77,27 +102,34 @@ footer a{color:#999;}
 
 
 /* animate */
-#balls {
+#one {
 	-webkit-animation-duration: 0.5s;
 	-webkit-animation-delay: 1s;
 /* 	-webkit-animation-iteration-count: infinite; */
 }
 
-#intro_body {
+#two {
 	-webkit-animation-duration: 0.5s;
 	-webkit-animation-delay: 1.2s;
 /* 	-webkit-animation-iteration-count: infinite; */
 }
 
-#contact_me {
+#three {
 	-webkit-animation-duration: 0.5s;
 	-webkit-animation-delay: 1.4s;
 /* 	-webkit-animation-iteration-count: infinite; */
 }
 
-#apples {
+#four {
 	-webkit-animation-duration: 0.5s;
 	-webkit-animation-delay: 1.6s;
+/* 	-webkit-animation-iteration-count: infinite; */
+}
+
+
+#five {
+	-webkit-animation-duration: 0.5s;
+	-webkit-animation-delay: 1.8s;
 /* 	-webkit-animation-iteration-count: infinite; */
 }
 
