--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -17,7 +17,7 @@ h1, h2, h3, h4, p, a, ul li{font-family: "proxima-nova",sans-serif; color:#999; 
 
 h2{font-weight:200; text-transform: uppercase; font-size:38px;}
 h2 span{color:#666;}
-h3{font-size:18px; text-transform: uppercase; letter-spacing: 2px;}
+h3{font-size:18px; text-transform: uppercase; letter-spacing: 2px; font-weight:300;}
 h4{font-size:13px; text-transform: uppercase; }
 
 ul li,
