added the resume

--- a/design/css/layout.css
+++ b/design/css/layout.css
@@ -67,7 +67,7 @@ section{text-align: center;}
 .hero .contact_link a{background :#1d2124; padding:10px; color:#fff; font-size:13px; text-transform: uppercase; letter-spacing: 1px; transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -webkit-transition: all .25s ease-in-out;}
 .hero .contact_link a:hover{padding:15px 10px 10px;}
 
-
+.internet .chinballs{border-radius: 999em; border:1px solid #e1c2b9}
 
 
 
